added findbugs and fixed findbug issues